# Isochrone

./: .gitignore  .gitmodules  C++Guideline.md  CMakeLists.txt  LICENSE  README.md  TODO.md
Ressource/: config.json  ligne 1.txt  timeTableParser.py
Ressource/Geographie/: coordinate.csv  coordinate.py  map.py
Ressource/Ligne1/: ligne1_a_lmamejv.csv  ligne1_r_lmamejv.csv  ligne1_r_s_lmamejv.csv  ligne_1_lmmjv.csv  ligne_1_r_12345s.csv  ligne_1_r_6t_12345v.csv  ligne_1_r_lmmjv - Copie.txt  ligne_1_r_lmmjv.txt  ligne_1_r_vlmmjv_s.txt  ligne_1_vlmmjv_s.csv  line.txt  line_1_a_12345s.csv  line_1_a_6t_12345v.csv  line_1_r_12345s.csv  line_1_r_6t_12345v.csv  parseClean.py  remove_space.py
Ressource/Ligne2/: .~lock.line_2_a_12345s.csv#  line_2_a_12345s.csv  line_2_a_6t_12345v.csv  line_2_a_7t_f.csv  line_2_a_lmmjv.csv  line_2_a_vlmmjv_s.csv  line_2_r_12345s.csv  line_2_r_6t_12345v.csv  line_2_r_7t_f.csv  line_2_r_lmmjv.csv
Ressource/Ligne3/: line.txt  line_3_a_12345s.csv  line_3_a_6t_12345v.csv  line_3_a_lmmjv.csv  line_3_r_12345s.csv  line_3_r_6t_12345v.csv
Ressource/Ligne4/: line_4_a_12345s.csv  line_4_a_6t_12345v.csv  line_4_a_7t_f.csv  line_4_a_d_f.csv  line_4_a_lmmjv.csv  line_4_a_vlmmjv_s.csv  line_4_r_12345s.csv  line_4_r_6t_12345v.csv  line_4_r_7t_f.csv  line_4_r_lmmjv.csv  line_4_r_vlmmjv_s.csv
Ressource/Ligne5/: line_5_a_6t_12345v.csv  line_5_a_d_f.csv  line_5_a_lmmjv.csv  line_5_r_12345s.csv  line_5_r_6t_12345v.csv  line_5_r_d_f.csv
Ressource/Ligne6/: line_6_a_6t_12345v.csv  line_6_a_lmmjv.csv  line_6_a_vlmmjv_s.csv  line_6_r_12345s.csv  line_6_r_6t_12345v.csv  line_6_r_lmmjv.csv
Ressource/Ligne7/: line_7_a_lmmjv.csv  line_7_r_123456t.csv  line_7_r_lmmjv.csv  line_7_r_vlmmjv_s.csv
Ressource/Ligne8/: line_8_a_6t.csv  line_8_a_lmmjv.csv  line_8_r_12345s.csv  line_8_r_s.csv
Ressource/ligne 134/: line_134_a_6t.csv  line_134_a_lmmjv.csv  line_134_a_vlmmjv.csv  line_134_r_6t.csv  line_134_r_lmmjv.csv  line_134_r_vlmmjv.csv
Ressource/ligne134/: line_134_a_6t.csv  line_134_r_12345s.csv
Ressource/pseudo code/: algorithm.md
documentation/: Architecture.drawio  CMakeLists.txt  Guideline.md  make.bat
documentation/doxygen/: Doxyfile.in
documentation/source/: classes.rst  conf.py  guideline.rst  index.rst  libraries.rst  setup.rst
documentation/source/classes/: context.rst  coordinate.rst  exceptions.rst  network.rst  projector.rst  reach_algorithm.rst  resource.rst  utils.rst
documentation/source/graph/: applytheme.py  classes.dot  classes_themed.dot  libraries.dot  them.json  theme.json
includes/algorithm/: algorithm_station.h  network_optimizer.h
includes/config/: config.h.in
includes/context/: Scheduled_Network.h  context.h  reach_algorithm.h  station.h
includes/coordinate/: coordinate.h  planar.h  projection.h  sphere.h
includes/map/: image.h
includes/network/: day_info.h  line.h  schedule.h  scheduled_line.h  station.h
includes/network_optimizer/: day_info.h  line.h  network.h  station.h  timetable.h
includes/reach_algorithm/: algorithm.h  optimized.h  simple.h  simple_par.h  simple_with_map.h  simple_with_map_par.h
includes/utils/: coordinate_2d.h  ctor.h  daytime.h  exception_def.h  general.h  general.hpp  owner.h  planar_coordinate.h  rectangle.h  sphere_coordinate.h
prototype/python/: coordinate.py  display.py  file_data.py  gif.py  line.py  main.py  station.py  test.py  util.py
src/: main.cpp
src/C++/: CMakeLists.txt
src/C++/src/algorithm/test/: CMakeLists.txt  algorithm_station_test.cpp  config.h.in  network_optimizer_test.cpp
src/C++/src/algorithm/test/resource_test/: config.json  coordinate.csv  l1_a.csv  l1_r.csv  l2_a.csv  l2_r.csv  l3_a_1.csv  l3_a_2.csv  l3_r_2.csv
src/C++/src/resource/test/: CMakeLists.txt  config_test.json  csv_engine_test.cpp  csv_engine_test.h  csv_schedule_test.cpp  csv_schedule_test.h  csv_station_test.cpp  csv_timetable_test.cpp  csv_timetable_test.h  resource_getter_test.cpp  test_schedule.csv  test_station.csv
src/C++/src/utils/: CMakeLists.txt  coordinate.cpp  daytime.cpp  general.cpp
src/C++/src/utils/test/: CMakeLists.txt  coordinate_2d_test.cpp  coordinate_2d_test.h  daytime_test.cpp  daytime_test.h  general_test.cpp
src/algorithm/: CMakeLists.txt  algorithm_station.cpp  network_optimizer.cpp
src/algorithm/test/: CMakeLists.txt  algorithm_station_test.cpp  algorithm_station_test.h  config.h  main.cpp  network_optimizer_test.cpp  network_optimizer_test.h
src/algorithm/test/resource_test/: config.json  l2_a.csv  l3_a_2.csv
src/context/: CMakeLists.txt  Scheduled_Network.cpp  reach_algorithm.cpp  station.cpp
src/coordinate/: CmakeLists.txt  coordinate.cpp  planar.cpp  projection.cpp  sphere.cpp
src/image/: bmp.cpp
src/main/: CMakeLists.txt  main.cpp
src/map/: CMakeLists.txt  image.cpp
src/network/test/: CMakeLists.txt  day_info_test.cpp  day_info_test.h  line_test.cpp  line_test.h  main.cpp  schedule_test.cpp  schedule_test.h  scheduled_line_test.cpp  scheduled_line_test.h  station_test.cpp  station_test.h
src/network_optimizer/: CMakeLists.txt  day_info.cpp  line.cpp  network.cpp  schedule.cpp  station.cpp  timetable.cpp
src/network_optimizer/test/: CMakeLists.txt  day_info_test.cpp  line_test.cpp  schedule_test.cpp  schedule_test.h
src/reach_algorithm/test/: CMakeLists.txt  algorithm_station_test.h  config.h  config.h.in  main.cpp  reach_algorithm_test.cpp  reach_algorithm_test.h
src/reach_algorithm/test/resource_test/: l3_r_1.csv
src/resource/csv/: CMakeLists.txt
src/resource/csv/engine/: file_parser.cpp  parser.cpp  string_parser.cpp
src/resource/csv/parser/: station.cpp  timetable.cpp
src/resource/csv/validator/: timetable.cpp
src/resource/test/: CMakeLists.txt  csv_engine_test.cpp  csv_engine_test.h  csv_station_test.cpp  csv_station_test.h  csv_timetable_test.cpp  csv_validator_test.cpp  csv_validator_test.h  resource_getter_test.cpp  resource_getter_test.h
src/utils/test/: CMakeLists.txt  coordinate_2d_test.cpp  coordinate_2d_test.h  daytime_test.cpp  daytime_test.h  general_test.cpp  general_test.h  main.cpp
timetable/: ligne 1 b.txt
(+113 files in other folders)
